--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
     <properties>
         <avro-serializer.version>7.7.2</avro-serializer.version>
         <avro.version>1.12.0</avro.version>
-        <jeap-crypto.version>3.4.0-feature-JEAP-5071-spring-boot-3-4-SNAPSHOT</jeap-crypto.version>
+        <jeap-crypto.version>3.7.0</jeap-crypto.version>
         <maven.api.version>3.9.9</maven.api.version>
         <maven.plugin.version>3.15.1</maven.plugin.version>
         <maven.javadoc.skip>false</maven.javadoc.skip>
