--- a/jeap-messaging-contract-annotation-processor/pom.xml
+++ b/jeap-messaging-contract-annotation-processor/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jeap-messaging</artifactId>
         <groupId>ch.admin.bit.jeap</groupId>
-        <version>8.10.0-SNAPSHOT</version>
+        <version>8.11.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -45,6 +45,11 @@
             <artifactId>jimfs</artifactId>
             <version>1.3.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
         </dependency>
     </dependencies>
 
