--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,13 @@
     <url>https://github.com/jeap-admin-ch/jeap-messaging/tree/main</url>
     <scm>
         <url>https://github.com/jeap-admin-ch/jeap-messaging.git</url>
+        <connection>scm:git:git://github.com/jeap-admin-ch/jeap-messaging.git</connection>
+        <developerConnection>scm:git:ssh://github.com:jeap-admin-ch/jeap-messaging.git</developerConnection>
     </scm>
     <developers>
         <developer>
             <name>BIT</name>
+            <email>jeap-community@bit.admin.ch</email>
             <organization>Federal Office of Information Technology, Systems and Telecommunication FOITT</organization>
             <organizationUrl>https://www.bit.admin.ch/</organizationUrl>
         </developer>
@@ -23,13 +26,13 @@
     </licenses>
 
     <artifactId>jeap-messaging</artifactId>
-    <version>8.14.0-SNAPSHOT</version>
+    <version>8.15.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <artifactId>jeap-internal-spring-boot-parent</artifactId>
         <groupId>ch.admin.bit.jeap</groupId>
-        <version>5.4.1</version>
+        <version>5.5.0</version>
     </parent>
 
     <modules>
