--- a/jeap-messaging-infrastructure-kafka-reactive-test/pom.xml
+++ b/jeap-messaging-infrastructure-kafka-reactive-test/pom.xml
@@ -26,13 +26,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>ch.admin.jeap.messaging.test.messagetype.jme</groupId>
+            <groupId>ch.admin.bit.jeap.messaging.test.messagetype.jme</groupId>
             <artifactId>jme-create-declaration-command</artifactId>
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ch.admin.jeap.messaging.test.messagetype.jme</groupId>
+            <groupId>ch.admin.bit.jeap.messaging.test.messagetype.jme</groupId>
             <artifactId>jme-declaration-created-event</artifactId>
             <version>1.4.0</version>
             <scope>test</scope>
