--- a/jeap-messaging-sequential-inbox/pom.xml
+++ b/jeap-messaging-sequential-inbox/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ch.admin.bit.jeap</groupId>
         <artifactId>jeap-messaging</artifactId>
-        <version>8.23.0-SNAPSHOT</version>
+        <version>8.24.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-sequential-inbox</artifactId>
@@ -45,6 +45,11 @@
             <groupId>io.zipkin.brave</groupId>
             <artifactId>brave</artifactId>
             <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
