--- a/jeap-messaging-infrastructure/pom.xml
+++ b/jeap-messaging-infrastructure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ch.admin.bit.jeap</groupId>
         <artifactId>jeap-messaging</artifactId>
-        <version>8.25.0-SNAPSHOT</version>
+        <version>8.26.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-infrastructure</artifactId>
@@ -74,16 +74,6 @@
         <dependency>
             <groupId>software.amazon.cryptools</groupId>
             <artifactId>AmazonCorrettoCryptoProvider</artifactId>
-            <classifier>linux-aarch_64</classifier>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.cryptools</groupId>
-            <artifactId>AmazonCorrettoCryptoProvider</artifactId>
-            <classifier>osx-x86_64</classifier>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.cryptools</groupId>
-            <artifactId>AmazonCorrettoCryptoProvider</artifactId>
             <classifier>osx-aarch_64</classifier>
         </dependency>
         <dependency>
@@ -109,6 +99,24 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.37</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.admin.bit.jeap.messaging.test.messagetype.jme</groupId>
+            <artifactId>jme-declaration-created-event</artifactId>
+            <version>1.4.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
