--- a/jeap-messaging-sequential-inbox-test/pom.xml
+++ b/jeap-messaging-sequential-inbox-test/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ch.admin.bit.jeap</groupId>
         <artifactId>jeap-messaging</artifactId>
-        <version>8.27.0-SNAPSHOT</version>
+        <version>8.27.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-sequential-inbox-test</artifactId>
@@ -138,5 +138,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <spring.test.context.cache.maxSize>1</spring.test.context.cache.maxSize>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
