--- a/jeap-messaging-contract-annotations/pom.xml
+++ b/jeap-messaging-contract-annotations/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jeap-messaging</artifactId>
         <groupId>ch.admin.bit.jeap</groupId>
-        <version>8.30.2-SNAPSHOT</version>
+        <version>8.30.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,6 +31,12 @@
             <groupId>ch.admin.bit.jeap.messaging.test.messagetype.jeap</groupId>
             <artifactId>jeap-initializer-simple-test-event</artifactId>
             <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.admin.bit.jeap.messaging.test.messagetype.jme</groupId>
+            <artifactId>jme-simple-test-event</artifactId>
+            <version>3.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
