--- a/jeap-messaging-sequential-inbox/pom.xml
+++ b/jeap-messaging-sequential-inbox/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ch.admin.bit.jeap</groupId>
         <artifactId>jeap-messaging</artifactId>
-        <version>8.38.1-SNAPSHOT</version>
+        <version>8.39.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-sequential-inbox</artifactId>
@@ -25,6 +25,16 @@
         <dependency>
             <groupId>ch.admin.bit.jeap</groupId>
             <artifactId>jeap-messaging-infrastructure-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>${shedlock.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
+            <version>${shedlock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
