JEAP-5672: Setting project name as now required by Maven Central

--- a/jeap-messaging-api/pom.xml
+++ b/jeap-messaging-api/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>jeap-messaging-api</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
 
     <dependencies>
