--- a/jeap-messaging-contract-annotation-processor/pom.xml
+++ b/jeap-messaging-contract-annotation-processor/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>jeap-messaging-contract-annotation-processor</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
 
     <dependencies>
