--- a/jeap-messaging-infrastructure-kafka-reactive/pom.xml
+++ b/jeap-messaging-infrastructure-kafka-reactive/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>jeap-messaging-infrastructure-kafka-reactive</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
 
     <dependencies>
