--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     </licenses>
 
     <artifactId>jeap-messaging</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <version>8.39.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
