--- a/jeap-messaging-registry-maven-plugin/pom.xml
+++ b/jeap-messaging-registry-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>jeap-messaging</artifactId>
         <groupId>ch.admin.bit.jeap</groupId>
-        <version>8.47.1-SNAPSHOT</version>
+        <version>8.48.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-registry-maven-plugin</artifactId>
@@ -114,6 +114,12 @@
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
             <version>1.5.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-jupiter</artifactId>
+            <version>2.1.8</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
