--- a/jeap-messaging-avro-maven-plugin/pom.xml
+++ b/jeap-messaging-avro-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>jeap-messaging</artifactId>
         <groupId>ch.admin.bit.jeap</groupId>
-        <version>8.49.1-SNAPSHOT</version>
+        <version>8.50.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jeap-messaging-avro-maven-plugin</artifactId>
@@ -168,6 +168,12 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.org.webcompere</groupId>
+            <artifactId>system-stubs-junit4</artifactId>
+            <version>2.1.8</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
