--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <commons-compress.version>1.27.1</commons-compress.version>
         <commons-io.version>2.19.0</commons-io.version>
         <commons-beanutils.version>1.11.0</commons-beanutils.version>
+        <jeap-spring-boot-roles-anywhere-starter.version>1.0.0</jeap-spring-boot-roles-anywhere-starter.version>
     </properties>
 
     <dependencyManagement>
