--- a/jeap-messaging-infrastructure/pom.xml
+++ b/jeap-messaging-infrastructure/pom.xml
@@ -78,6 +78,10 @@
             <classifier>osx-aarch_64</classifier>
         </dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-actuator-autoconfigure</artifactId>
             <scope>provided</scope>
